force-app/main/default/objects/Interaction__c/fields/Financial_Overview__c.field-meta.xml
<CustomField>
    <fullName>Financial_Overview__c</fullName>
    <description>Business Start up Costs, Breakeven, Cash Flow</description>
    <inlineHelpText>Business Start up Costs, Breakeven, Cash Flow</inlineHelpText>
    <label>Financial Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>