force-app/main/default/objects/Interaction__c/fields/Follow_Up_Consultation_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Consultation_Type__c</fullName>
    <description>What type of follow up is required</description>
    <inlineHelpText>What type of follow up is required</inlineHelpText>
    <label>Follow-Up Consultation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follow-Up for Walk in clients</fullName>
            </value>
            <value>
                <fullName>Follow-Up for Online clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>