force-app/main/default/objects/Interaction__c/fields/GFA_Change_in_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>GFA_Change_in_Next_12_Months__c</fullName>
    <description>How Much space sq ft will increase or decrease by</description>
    <inlineHelpText>How Much space sq ft will increase or decrease by</inlineHelpText>
    <label>GFA Change in Next 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>