force-app/main/default/objects/Interaction__c/fields/GFA_Incr_or_Decre_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>GFA_Incr_or_Decre_Next_12_Months__c</fullName>
    <description>If expecting Increase Yes if Not, No.</description>
    <inlineHelpText>If expecting Increase Yes if Not, No.</inlineHelpText>
    <label>GFA Incr. or Decre. Next 12 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>