force-app/main/default/objects/Interaction__c/fields/Improvement_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Opportunity__c</fullName>
    <label>Improvement Opportunity</label>
    <length>13107</length>
    <type>LongTextArea</type>
</CustomField>