force-app/main/default/objects/Interaction__c/fields/Interaction_Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Integration_Source__c</fullName>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <description>This Field will be populated based on how record is created in salesforce i.e. or through Form Assembly</description>
    <inlineHelpText>This Field will be populated based on how record is created in salesforce i.e. or through Form Assembly</inlineHelpText>
    <label>Interaction Integration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>