force-app/main/default/objects/Interaction__c/fields/Interaction_Owner__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The owner of the Interaction</description>
    <inlineHelpText>The owner of the Interaction</inlineHelpText>
    <label>Interaction Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interaction</relationshipName>
    <type>Lookup</type>
</CustomField>