force-app/main/default/objects/Interaction__c/fields/Interaction_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Owner_Manager__c</fullName>
    <formula>If(CreatedBy.ManagerId!=null, CreatedBy.Manager.FirstName+&#39; &#39;+ CreatedBy.Manager.LastName,CreatedBy.FirstName+&#39; &#39;+ CreatedBy.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Owner Manager</label>
    <type>Text</type>
</CustomField>