force-app/main/default/objects/Interaction__c/fields/Internal_unit__c.field-meta.xml
<CustomField>
    <fullName>Internal_unit__c</fullName>
    <description>Applicable to Internal Referral Type</description>
    <inlineHelpText>Applicable to Internal Referral Type</inlineHelpText>
    <label>Internal Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Internal_Referral__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>311 Toronto</fullName>
            </value>
            <value>
                <fullName>Affordable Housing Office</fullName>
            </value>
            <value>
                <fullName>Chief Resilience Office</fullName>
            </value>
            <value>
                <fullName>City Planning</fullName>
            </value>
            <value>
                <fullName>Civic Innovation Office</fullName>
            </value>
            <value>
                <fullName>Economic Development &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Employment &amp; Social Services</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; Construction Services</fullName>
            </value>
            <value>
                <fullName>Environment &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Facilities Management</fullName>
            </value>
            <value>
                <fullName>Fire Services</fullName>
            </value>
            <value>
                <fullName>Municipal Licensing &amp; Standards</fullName>
            </value>
            <value>
                <fullName>Parks, Forestry &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Purchasing &amp; Materials Management</fullName>
            </value>
            <value>
                <fullName>Real Estate Services</fullName>
            </value>
            <value>
                <fullName>Social Development, Finance &amp; Administration</fullName>
            </value>
            <value>
                <fullName>Solid Waste Management Services</fullName>
            </value>
            <value>
                <fullName>Toronto Building</fullName>
            </value>
            <value>
                <fullName>Toronto Office of Partnerships</fullName>
            </value>
            <value>
                <fullName>Toronto Paramedic Services</fullName>
            </value>
            <value>
                <fullName>Toronto Public Health</fullName>
            </value>
            <value>
                <fullName>Toronto Water</fullName>
            </value>
            <value>
                <fullName>Transformation Office</fullName>
            </value>
            <value>
                <fullName>Transportation Services</fullName>
            </value>
            <value>
                <fullName>Waterfront Secretariat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>