force-app/main/default/objects/Interaction__c/fields/Issues_To_Discuss__c.field-meta.xml
<CustomField>
    <fullName>Issues_To_Discuss__c</fullName>
    <description>What are the issues to be discussed</description>
    <inlineHelpText>What are the issues to be discussed</inlineHelpText>
    <label>Issues To Discuss</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>