force-app/main/default/objects/Interaction__c/fields/Last_Year_Employment_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Employment_Full_Time__c</fullName>
    <description>The total number of full time employees for Last year.</description>
    <inlineHelpText>The total number of full time employees for Last year.</inlineHelpText>
    <label>Last Year Employment-Full-Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>