force-app/main/default/objects/Interaction__c/fields/Last_Year_Employment_Total__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Employment_Total__c</fullName>
    <description>The total number of full time and part time employees. (Employment Full time + Employment Part Time for Last year.</description>
    <formula>Last_Year_Employment_Part_Time__c + Last_Year_Employment_Full_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Employment - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>