force-app/main/default/objects/Interaction__c/fields/Lease_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiry__c</fullName>
    <description>If Leased, when does the lease expire</description>
    <inlineHelpText>If Leased, when does the lease expire</inlineHelpText>
    <label>Lease Expiry</label>
    <type>Date</type>
</CustomField>