force-app/main/default/objects/Interaction__c/fields/Legacy_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used to store the actual record Id of Consultation or Corporate based on record mapped.</description>
    <inlineHelpText>This field is used to store the actual record Id of Consultation or Corporate based on record mapped.</inlineHelpText>
    <label>Legacy Record Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>