force-app/main/default/objects/Interaction__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of consultation</description>
    <inlineHelpText>Location of consultation</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scarborough Civic Centre - 150 Borough Drive - Main Floor</fullName>
            </value>
            <value>
                <fullName>North York Civic Centre - 5100 Yonge Street - Main Floor</fullName>
            </value>
            <value>
                <fullName>Parkdale Innovation Centre (1464 Queen Street West)</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Downtown Toronto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>