force-app/main/default/objects/Interaction__c/fields/Marketing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Plan__c</fullName>
    <description>Marketing Plan assistance requested</description>
    <inlineHelpText>Marketing Plan assistance requested</inlineHelpText>
    <label>Marketing Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>