force-app/main/default/objects/Interaction__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <description>Meeting Date</description>
    <inlineHelpText>Meeting Date</inlineHelpText>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>