force-app/main/default/objects/Interaction__c/fields/Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Time__c</fullName>
    <description>Meeting Time</description>
    <inlineHelpText>Meeting Time</inlineHelpText>
    <label>Meeting Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>830</fullName>
            </value>
            <value>
                <fullName>900</fullName>
            </value>
            <value>
                <fullName>930</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1030</fullName>
            </value>
            <value>
                <fullName>1100</fullName>
            </value>
            <value>
                <fullName>1130</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1230</fullName>
            </value>
            <value>
                <fullName>1300</fullName>
            </value>
            <value>
                <fullName>1330</fullName>
            </value>
            <value>
                <fullName>1400</fullName>
            </value>
            <value>
                <fullName>1430</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>1530</fullName>
            </value>
            <value>
                <fullName>1600</fullName>
            </value>
            <value>
                <fullName>1630</fullName>
            </value>
            <value>
                <fullName>1700</fullName>
            </value>
            <value>
                <fullName>1730</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>11</label>
            </value>
            <value>
                <fullName>12</fullName>
                <isActive>false</isActive>
                <label>12</label>
            </value>
            <value>
                <fullName>13</fullName>
                <isActive>false</isActive>
                <label>13</label>
            </value>
            <value>
                <fullName>14</fullName>
                <isActive>false</isActive>
                <label>14</label>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>15</label>
            </value>
            <value>
                <fullName>16</fullName>
                <isActive>false</isActive>
                <label>16</label>
            </value>
            <value>
                <fullName>17</fullName>
                <isActive>false</isActive>
                <label>17</label>
            </value>
            <value>
                <fullName>18</fullName>
                <isActive>false</isActive>
                <label>18</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>