force-app/main/default/objects/Interaction__c/fields/MeetingTime__c.field-meta.xml
<CustomField>
    <fullName>MeetingTime__c</fullName>
    <description>Meeting Time</description>
    <inlineHelpText>Meeting Time</inlineHelpText>
    <label>Meeting Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>08 00 AM - 08 30 AM</fullName>
            </value>
            <value>
                <fullName>08 30 AM - 09 00 AM</fullName>
            </value>
            <value>
                <fullName>09 00 AM - 09 30 AM</fullName>
            </value>
            <value>
                <fullName>09 30 AM - 10 00 AM</fullName>
            </value>
            <value>
                <fullName>10 00 AM - 10 30 AM</fullName>
            </value>
            <value>
                <fullName>10 30 AM - 11 00 AM</fullName>
            </value>
            <value>
                <fullName>11 00 AM - 11 30 AM</fullName>
            </value>
            <value>
                <fullName>11 30 AM - 12 00 PM</fullName>
            </value>
            <value>
                <fullName>12 00 PM - 12 30 PM</fullName>
            </value>
            <value>
                <fullName>12 30 PM - 01 30 PM</fullName>
            </value>
            <value>
                <fullName>01 00 PM - 01 00 PM</fullName>
            </value>
            <value>
                <fullName>01 30 PM - 02 00 PM</fullName>
            </value>
            <value>
                <fullName>02 00 PM - 02 30 PM</fullName>
            </value>
            <value>
                <fullName>02 30 PM - 03 00 PM</fullName>
            </value>
            <value>
                <fullName>03 00 PM - 03 30 PM</fullName>
            </value>
            <value>
                <fullName>03 30 PM - 04 00 PM</fullName>
            </value>
            <value>
                <fullName>04 00 PM - 04 30 PM</fullName>
            </value>
            <value>
                <fullName>04 30 PM - 05 00 PM</fullName>
            </value>
            <value>
                <fullName>05 00 PM - 05 30 PM</fullName>
            </value>
            <value>
                <fullName>05 30 PM - 06 00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>