force-app/main/default/objects/Interaction__c/fields/NAICS_6_Digit__c.field-meta.xml
<CustomField>
    <fullName>NAICS_6_Digit__c</fullName>
    <formula>Account__r.NAICS_6_Digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS 6 Digit #</label>
    <type>Text</type>
</CustomField>