force-app/main/default/objects/Interaction__c/fields/Number_of_Years_In_Business__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_In_Business__c</fullName>
    <description>Number of year business has been operational</description>
    <inlineHelpText>Number of year business has been operational</inlineHelpText>
    <label>Number of Years In Business</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>