force-app/main/default/objects/Interaction__c/fields/Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Type__c</fullName>
    <description>Is the Property Leased or Owned</description>
    <inlineHelpText>Is the Property Leased or Owned</inlineHelpText>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Coworking Space</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>