force-app/main/default/objects/Interaction__c/fields/Other_Employment_Information_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Employment_Information_Source__c</fullName>
    <label>Other Employment Information Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>