force-app/main/default/objects/Interaction__c/fields/Purpose_of_the_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_the_Interaction__c</fullName>
    <description>The reason for the Interaction.
** Business Outcome Survey applicable for these Purpose of Interactions</description>
    <inlineHelpText>The reason for the Interaction.
** Business Outcome Survey applicable for these Purpose of Interactions</inlineHelpText>
    <label>Purpose of the Interaction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attraction - Investment Attraction (Foreign)**</fullName>
            </value>
            <value>
                <fullName>Attraction - Investment Attraction (Local &amp; National)**</fullName>
            </value>
            <value>
                <fullName>Business Development - Business Introduction</fullName>
            </value>
            <value>
                <fullName>Business Development - Cluster Development</fullName>
            </value>
            <value>
                <fullName>Business Development - Delegation Assistance</fullName>
            </value>
            <value>
                <fullName>Business Development - Event Assistance</fullName>
            </value>
            <value>
                <fullName>Business Development - Expansion Assistance**</fullName>
            </value>
            <value>
                <fullName>Business Development - Export Assistance**</fullName>
            </value>
            <value>
                <fullName>Business Development - Import Assistance**</fullName>
            </value>
            <value>
                <fullName>Business Development - Intelligence Gathering</fullName>
            </value>
            <value>
                <fullName>Business Development - Location Assistance**</fullName>
            </value>
            <value>
                <fullName>Business Development - Market Development**</fullName>
            </value>
            <value>
                <fullName>Business Development - Partnership Development</fullName>
            </value>
            <value>
                <fullName>Business Development - PR &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Business Development - Startup Assistance**</fullName>
            </value>
            <value>
                <fullName>Business Development - Workforce Development**</fullName>
            </value>
            <value>
                <fullName>City - Building Permit**</fullName>
            </value>
            <value>
                <fullName>City - IMIT</fullName>
            </value>
            <value>
                <fullName>City - Planning Issue (OP &amp; ZBL)**</fullName>
            </value>
            <value>
                <fullName>City - Preliminary Project Review**</fullName>
            </value>
            <value>
                <fullName>City - Property Standards**</fullName>
            </value>
            <value>
                <fullName>City - Property Taxes**</fullName>
            </value>
            <value>
                <fullName>City - Regulatory**</fullName>
            </value>
            <value>
                <fullName>Regulatory - Federal**</fullName>
            </value>
            <value>
                <fullName>Regulatory - Provincial**</fullName>
            </value>
            <value>
                <fullName>Utilities – Broadband</fullName>
            </value>
            <value>
                <fullName>Utility - Electric**</fullName>
            </value>
            <value>
                <fullName>Utility - Gas**</fullName>
            </value>
            <value>
                <fullName>Utility - Water**</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>