force-app/main/default/objects/Interaction__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <description>This field is used to capture the reason provided by client for cancelling a consultation meeting scheduled with City of Toronto Advisor</description>
    <inlineHelpText>This field is used to capture the reason provided by client for cancelling a consultation meeting scheduled with City of Toronto Advisor</inlineHelpText>
    <label>Reason for Cancellation</label>
    <type>TextArea</type>
</CustomField>