force-app/main/default/objects/Interaction__c/fields/Related_Contact_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Email_Opt_Out__c</fullName>
    <formula>Contact__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Contact Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>